# internal/entrypoint/static/dist/openapi.yaml
@@ -3,72 +3,26 @@ info:
   title: Wikipedia Table API
   version: 1.0.0
   description: |
-    [https://github.com/atye/wikitable-api](https://github.com/atye/wikitable-api/)
+    [https://github.com/atye/wikitable2json](https://github.com/atye/wikitable2json/)
 
-    ### Notes
-    - Tables with the HTML class `wikitable`, `standard`, or `toccolours` are returned
+    - Tables with the HTML class `wikitable`, `standard`, and `toccolours` are returned
     - If you are making automated requests, set a unique `User-Agent` header with an email address or URL contact page per the [Wikimedia REST API](https://en.wikipedia.org/api/rest_v1/)
 
-    ### Examples:
+    ## Examples:
+    ### Get all tables on page [Arhaan_Khan](https://en.wikipedia.org/wiki/Arhaan_Khan) in the default matrix format:
     [https://www.wikitable2json.com/api/Arhaan_Khan](https://www.wikitable2json.com/api/Arhaan_Khan)
-    ```
-    [
-      [
-          [
-            "Year",
-            "Title",
-            "Role",
-            "Notes"
-          ],
-          [
-            "2017",
-            "SriValli",
-            "Majnu",
-            "Telugu film"
-          ]
-      ],
-      [
-          [
-            "Year",
-            "Title",
-            "Role",
-            "Notes"
-          ],
-          [
-            "2016-2018",
-            "Badho Bahu",
-            "Rana Ahlawat",
-            "Television debut"
-          ],
-          [
-            "2019",
-            "Bigg Boss 13",
-            "Contestant",
-            "Entered on day 36 evicted on day 50, re-entered on day 65  re-evicted on day 92"
-          ]
-      ]
-    ]
-    ```
 
-    [https://www.wikitable2json.com/api/Arhaan_Khan?table=1&format=keyValue&lang=en](https://www.wikitable2json.com/api/Arhaan_Khan?table=1&format=keyValue&lang=en)
-    ```
-    [
-      [
-          {
-            "Notes":"Television debut",
-            "Role":"Rana Ahlawat",
-            "Title":"Badho Bahu",
-            "Year":"2016-2018"
-          },
-          {
-            "Notes":"Entered on day 36 evicted on day 50, re-entered on day 65  re-evicted on day 92",
-            "Role":"Contestant",
-            "Title":"Bigg Boss 13",
-            "Year":"2019"
-          }
-      ]
-    ]
-    ```
+    ### Get the first and second tables on page [Arhaan_Khan](https://en.wikipedia.org/wiki/Arhaan_Khan) in the default matrix format:
+    [https://www.wikitable2json.com/api/Arhaan_Khan](https://www.wikitable2json.com/api/Arhaan_Khan?table=1&table=2)
+
+    ### Get the second table on page [Arhaan_Khan](https://en.wikipedia.org/wiki/Arhaan_Khan) in a key-value format using the first row as keys:
+    [https://www.wikitable2json.com/api/Arhaan_Khan?table=1&keyRows=1](https://www.wikitable2json.com/api/Arhaan_Khan?table=1&keyRows=1)
+
+    ### Get the second table on page [1970–71_Chester_F.C._season](https://en.wikipedia.org/wiki/1970–71_Chester_F.C._season) in a key-value format using the first two rows as key:
+    [https://www.wikitable2json.com/api/1970–71_Chester_F.C._season?table=1&keyRows=2](https://www.wikitable2json.com/api/1970–71_Chester_F.C._season?table=1&keyRows=2)
+
+    ### Get all tables on German page [Liste_der_Baudenkmäler_in_Feucht](https://de.wikipedia.org/wiki/Liste_der_Baudenkmäler_in_Feucht) in the default matrix format: 
+    [https://www.wikitable2json.com/api/Liste_der_Baudenkmäler_in_Feucht?lang=de](https://www.wikitable2json.com/api/Liste_der_Baudenkmäler_in_Feucht?lang=de)
 paths:
   "/api/{page}":
     get:
@@ -100,16 +54,13 @@ paths:
           schema:
             type: string
             default: en
-        - name: format
+        - name: keyRows
           description: |
-            One of the following schemas:
-              - matrix
-              - keyValue
+            Specify the first x rows to use for key values to get a key-value response
           in: query
           required: false
           schema:
-            type: string
-            default: matrix
+            type: integer
         - name: cleanRef
           description: |
             Set to true to remove the reference link texts<br/>
